# wesichain

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  WAIVERS.yml  WESICHAIN_REVIEW.md  docker-compose.chroma.yml  package_skills.sh  publish_all.sh  wesichain.skills
examples/: Cargo.toml  agent.rs
wesichain-agent/: Cargo.toml
wesichain-agent/benches/: runtime_profiles.rs
wesichain-agent/src/: action.rs  agent.rs  as_tool.rs  checkpoint.rs  error.rs  event.rs  executor.rs  factory.rs  lib.rs  llm.rs  permission.rs  phase.rs  policy.rs  runtime.rs  state.rs  tool.rs  tooling.rs  validation.rs
wesichain-agent/tests/: agent_factory.rs  agent_loop.rs  agent_state.rs  callbacks.rs  chaos_failures.rs  contracts.rs  event_contract.rs  llm_boundary.rs  runtime_loop.rs  smoke.rs  tool_dispatch.rs  tool_macro_integration.rs  tool_registry.rs  tooling_registry.rs  typestate_compile.rs
wesichain-anthropic/: Cargo.toml  README.md
wesichain-anthropic/src/: client.rs  lib.rs  stream.rs  types.rs
wesichain-checkpoint-postgres/: Cargo.toml
wesichain-checkpoint-postgres/src/: lib.rs
wesichain-checkpoint-postgres/tests/: checkpointer.rs
wesichain-checkpoint-redis/: Cargo.toml
wesichain-checkpoint-redis/src/: history.rs  keys.rs  lib.rs  script.rs
wesichain-checkpoint-redis/tests/: checkpointer.rs
wesichain-checkpoint-sql/: Cargo.toml
wesichain-checkpoint-sql/src/: dialect.rs  error.rs  lib.rs  migrations.rs  ops.rs  projection.rs  schema.rs
wesichain-checkpoint-sql/tests/: ops_sqlite.rs  projection.rs  schema.rs
wesichain-checkpoint-sqlite/: Cargo.toml
wesichain-checkpoint-sqlite/examples/: checkpoint_persistence.rs
wesichain-checkpoint-sqlite/src/: lib.rs
wesichain-checkpoint-sqlite/tests/: checkpointer.rs  graph_builder_integration.rs
wesichain-chroma/: Cargo.toml  MIGRATION.md
wesichain-chroma/examples/: rag_integration.rs
wesichain-chroma/src/: lib.rs
wesichain-chroma/tests/: contract_tests.rs
wesichain-cli/: Cargo.toml  README.md
wesichain-cli/src/: main.rs
wesichain-compat/: Cargo.toml  README.md
wesichain-compat/src/: lib.rs
wesichain-compat/tests/: end_to_end.rs  integration.rs
wesichain-core/: Cargo.toml  README.md
wesichain-core/src/: agent_event.rs  approval.rs  binding.rs  capability.rs  chain.rs  checkpoint.rs  document.rs  embedding.rs  error.rs  fallbacks.rs  lib.rs  llm.rs  metadata_filter.rs  output_parsers.rs  persistence.rs  prelude.rs  rate_limiter.rs  react.rs  registry.rs  retrieval_state.rs  retry.rs  runnable.rs  runnable_parallel.rs  serde.rs  state.rs  state_tests.rs  time_limited.rs  token_budget.rs  tool.rs  value.rs  vector_store.rs
wesichain-core/tests/: agent_event.rs  agent_example.rs  callbacks.rs  callbacks_llm.rs  callbacks_llm_handler.rs  chain_invoke.rs  chain_stream.rs  document.rs  embedding_trait.rs  error.rs  error_conversions.rs  llm_types.rs  metadata_filter.rs  output_parsers.rs  react_state.rs  registry_reconstruction.rs  retrieval_state.rs  retry.rs  runnable_batch.rs  runnable_stream.rs  serialization.rs  tool_error.rs  traced_runnable.rs  traced_runnable_streaming.rs  value.rs  vector_store_trait.rs  week2_integration.rs  week7_features.rs
wesichain-embeddings/: Cargo.toml
wesichain-embeddings/src/: candle.rs  error.rs  google.rs  lib.rs  ollama.rs  openai.rs
wesichain-embeddings/tests/: error.rs  google.rs  google_integration.rs  ollama.rs  openai.rs
wesichain-graph/: Cargo.toml  README.md
wesichain-graph/benches/: graph_loop.rs
wesichain-graph/examples/: human_in_loop_review.rs  parallel_research_agent.rs  persistent_conversation.rs  react_agent.rs  retriever_node.rs  simple_retrieval_graph.rs
wesichain-graph/src/: checkpoint.rs  config.rs  error.rs  file_checkpointer.rs  graph.rs  hitl.rs  interrupt.rs  lib.rs  observer.rs  parallel_agents.rs  program.rs  react_agent.rs  react_subgraph.rs  reducer.rs  retriever_node.rs  state.rs  stream.rs  supervisor.rs  tool_node.rs
wesichain-graph/tests/: callbacks.rs  checkpoint.rs  checkpointer_file.rs  checkpointer_sqlite.rs  concurrency_repro.rs  conditional_fanout.rs  execution_config.rs  graph_agent_events.rs  graph_builder.rs  graph_checkpoint.rs  graph_conditional.rs  graph_edges.rs  graph_errors.rs  graph_file_checkpointer.rs  graph_interrupt.rs  graph_observer.rs  graph_program.rs  graph_safety.rs  graph_stream.rs  hitl.rs  interrupts.rs  loop_patterns.rs  observer.rs  parallel_execution.rs  parallel_merge.rs  parallel_tools.rs  react_agent.rs  react_subgraph.rs  retriever_node.rs  safety_guards.rs  state.rs  state_reducer.rs  streaming_parallel.rs  subgraph_repro.rs  supervisor.rs  tool_node.rs  unified_observability.rs
wesichain-langfuse/: Cargo.toml  README.md
wesichain-langfuse/src/: client.rs  config.rs  handler.rs  lib.rs  types.rs
wesichain-langsmith/: Cargo.toml
wesichain-langsmith/src/: client.rs  config.rs  events.rs  exporter.rs  handler.rs  lib.rs  observer.rs  run_store.rs  sampler.rs  sanitize.rs
wesichain-langsmith/tests/: client.rs  events.rs  exporter.rs  handler.rs  handler_llm.rs  integration.rs  live_smoke.rs  observer.rs  react_agent_integration.rs  run_store.rs  sampler.rs  sanitize.rs
wesichain-llm/: Cargo.toml
wesichain-llm/src/: lib.rs  ollama.rs  openai.rs  openai_compatible.rs  types.rs
wesichain-llm/tests/: deepseek_integration.rs  google_compile.rs  google_integration.rs  google_invoke.rs  google_stream.rs  llm_trait.rs  ollama_invoke.rs  ollama_stream.rs  ollama_stream_invoke.rs  types.rs  (+3 more)
wesichain-macros/: Cargo.toml
wesichain-mcp/: Cargo.toml  README.md
wesichain-memory/: Cargo.toml
wesichain-otel/: Cargo.toml  README.md
wesichain-pinecone/: Cargo.toml  README.md
wesichain-prompt/: Cargo.toml
wesichain-qdrant/: Cargo.toml  README.md
wesichain-rag/: Cargo.toml  README.md
wesichain-retrieval/: Cargo.toml
wesichain-server/: Cargo.toml  README.md
wesichain-session/: Cargo.toml  README.md
wesichain-tools/: Cargo.toml  README.md
wesichain-weaviate/: Cargo.toml  README.md
(+240 files in other folders)
