[workspace]
members = [
  "wesichain",
  "wesichain-core",
  "wesichain-prompt",
  "wesichain-llm",

  "wesichain-graph",
  "wesichain-checkpoint-sql",
  "wesichain-checkpoint-sqlite",
  "wesichain-checkpoint-postgres",
  "wesichain-checkpoint-redis",
  "wesichain-embeddings",
  "wesichain-retrieval",
  "wesichain-langsmith",
  "wesichain-pinecone",
  "wesichain-qdrant",
  "wesichain-chroma",
  "wesichain-weaviate",
  "wesichain-rag",
  "wesichain-compat",
  "wesichain-agent",
  "wesichain-macros", "wesichain-memory",
  "examples",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.75"
repository = "https://github.com/wesichain/wesichain"
homepage = "https://github.com/wesichain/wesichain"
description = "Rust-native LLM agents & chains with resumable ReAct workflows"
