[package]
name = "wesichain-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["rt"] }
wesichain-core = { path = "../wesichain-core", version = "0.2.1" }

[dev-dependencies]
trybuild = "1"
