[package]
name = "wesichain-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
wesichain-core = { path = "../wesichain-core", version = "0.2.1" }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["macros", "rt"] }
trybuild = "1"

[[bench]]
name = "runtime_profiles"
harness = false
