[package]
name = "wesichain-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["llm", "agents", "react", "tools", "async"]
categories = ["asynchronous", "algorithms"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
wesichain-core = { path = "../wesichain-core", version = "0.3.0" }

[dev-dependencies]
async-trait = "0.1"
criterion = "0.5"
tokio = { version = "1", features = ["macros", "rt"] }
trybuild = "1"
wesichain-macros = { path = "../wesichain-macros", version = "0.3.0" }
schemars = "0.8"

[[bench]]
name = "runtime_profiles"
harness = false
