[package]
name = "wesichain-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Anthropic Claude provider for Wesichain"
keywords = ["llm", "claude", "anthropic", "async", "thinking"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

[features]
default = ["stream"]
stream = []
vision = []

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wesichain-core = { path = "../wesichain-core", version = "0.3.0" }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
