[package]
name = "wesichain-checkpoint-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Postgres checkpoint backend for Wesichain"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
wesichain-checkpoint-sql = { path = "../wesichain-checkpoint-sql", version = "0.2.1" }
wesichain-core = { path = "../wesichain-core", version = "0.2.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wesichain-graph = { path = "../wesichain-graph", version = "0.2.1" }

