[package]
name = "wesichain-checkpoint-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis checkpoint backend for Wesichain"

[dependencies]
async-trait = "0.1"
fred = { version = "9", features = ["serde-json", "i-keys", "i-sorted-sets", "i-scripts"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
wesichain-graph = { path = "../wesichain-graph", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
