[package]
name = "wesichain-checkpoint-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared SQL checkpoint schema and operations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
