[package]
name = "wesichain-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["llm", "ai", "runnable", "chain", "async"]
categories = ["asynchronous", "data-structures"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["time", "sync"] }
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
wesichain-macros = { path = "../wesichain-macros", version = "0.3.0" }
