[package]
name = "wesichain-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embedding providers for Wesichain"

[features]
default = []
openai = ["dep:async-openai"]
ollama = ["dep:reqwest"]
candle = ["dep:candle-core", "dep:candle-nn"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wesichain-core = { path = "../wesichain-core" }

async-openai = { version = "0.23", optional = true }
reqwest = { version = "0.12", optional = true }
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
