[package]
name = "wesichain-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wesichain-core = { path = "../wesichain-core" }
wesichain-prompt = { path = "../wesichain-prompt" }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
