[package]
name = "wesichain-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wesichain-agent = { path = "../wesichain-agent", version = "0.1.0" }
wesichain-llm = { path = "../wesichain-llm", version = "0.1.0" }
wesichain-core = { path = "../wesichain-core", version = "0.1.0" }
wesichain-prompt = { path = "../wesichain-prompt", version = "0.1.0" }
chrono = { version = "0.4", features = ["clock"] }
wesichain-retrieval = { path = "../wesichain-retrieval", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5"
libc = "0.2"
tempfile = "3"

[[bench]]
name = "graph_loop"
harness = false
