[package]
name = "wesichain-langfuse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Langfuse observability integration for wesichain"
keywords = ["llm", "observability", "tracing", "langfuse", "ai"]
categories = ["development-tools", "development-tools::debugging"]
readme = "README.md"

[dependencies]
wesichain-core  = { path = "../wesichain-core", version = "0.3.0" }
async-trait     = "0.1"
chrono          = { version = "0.4", features = ["serde"] }
dashmap         = "5"
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
thiserror       = "1"
tokio           = { version = "1", features = ["sync", "rt", "time", "macros"] }
uuid            = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
