[package]
name = "wesichain-langsmith"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LangSmith observability for Wesichain graphs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
dashmap = "6"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
wesichain-core = { path = "../wesichain-core" }
wesichain-graph = { path = "../wesichain-graph" }

[dev-dependencies]
wiremock = "0.6"
