[package]
name = "wesichain-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
async-openai = { version = "0.21", optional = true }
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
secrecy = "0.8"
url = "2"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wesichain-core = { path = "../wesichain-core" }

[features]
default = ["ollama"]
openai = ["async-openai"]
deepseek = []
google = []
ollama = []
all-providers = ["openai", "deepseek", "google", "ollama"]

[dev-dependencies]
httpmock = "0.7"
