[package]
name = "wesichain-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["mcp", "llm", "tools", "async", "protocol"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[dependencies]
wesichain-core  = { path = "../wesichain-core", version = "0.3.0" }
wesichain-agent = { path = "../wesichain-agent", version = "0.3.0" }
async-trait = "0.1"
futures = "0.3"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["process", "io-util", "io-std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-util = { version = "0.7" }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
