[package]
name = "wesichain-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["llm", "memory", "conversation", "agents", "async"]
categories = ["asynchronous", "data-structures"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
wesichain-core = { path = "../wesichain-core", version = "0.3.0" }
wesichain-llm = { path = "../wesichain-llm", version = "0.3.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
futures = "0.3"
