[package]
name = "wesichain-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
wesichain-core = { path = "../wesichain-core" }
regex = "1"
