[package]
name = "wesichain-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
wesichain-core = { path = "../wesichain-core", version = "0.2.0" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
