[package]
name = "wesichain-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["llm", "prompt", "templates", "chat", "async"]
categories = ["template-engine", "text-processing"]

[features]
default = []
yaml = ["dep:serde_yaml"]

[dependencies]
wesichain-core = { path = "../wesichain-core", version = "0.3.0" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
thiserror = "1"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
