[package]
name = "wesichain-qdrant"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Qdrant vector store integration for Wesichain"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qdrant-client = "1"
thiserror = "1"
tracing = "0.1"
wesichain-core = { path = "../wesichain-core", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "vs_langchain"
harness = false
