[package]
name = "wesichain-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
futures = "0.3"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
wesichain-core = { path = "../wesichain-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
