[package]
name = "wesichain-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
wesichain-core = { path = "../wesichain-core" }
wesichain-graph = { path = "../wesichain-graph" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wesichain-checkpoint-sqlite = { path = "../wesichain-checkpoint-sqlite" }
