[package]
name = "wesichain-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Retrieval stores and helpers for Wesichain"

[features]
default = []
pdf = ["dep:pdf-extract"]
uuid = ["dep:uuid"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
wesichain-core = { path = "../wesichain-core" }
wesichain-embeddings = { path = "../wesichain-embeddings" }

pdf-extract = { version = "0.7", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "in_memory"
harness = false
