[package]
name = "wesichain-session"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["llm", "session", "cost", "tokens", "agents"]
categories = ["asynchronous", "data-structures"]
readme = "README.md"

[dependencies]
wesichain-core = { path = "../wesichain-core", version = "0.3.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
