[package]
name = "wesichain-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["llm", "tools", "coding", "files", "agents"]
categories = ["development-tools", "filesystem"]
readme = "README.md"

[features]
default = ["http", "fs"]
http   = ["dep:reqwest"]
fs     = ["dep:glob", "dep:regex", "dep:walkdir", "dep:diffy", "dep:ignore"]
search = ["dep:reqwest"]
exec   = ["dep:tokio", "tokio/io-util"]
git    = ["dep:git2"]

[dependencies]
wesichain-core  = { path = "../wesichain-core",  version = "0.3.0" }
wesichain-agent = { path = "../wesichain-agent", version = "0.3.0" }
async-trait = "0.1"
schemars   = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
tokio      = { version = "1", features = ["process", "time", "io-util"], optional = true }
glob       = { version = "0.3", optional = true }
regex      = { version = "1", optional = true }
walkdir    = { version = "2", optional = true }
diffy      = { version = "0.4", optional = true }
ignore     = { version = "0.4", optional = true }
git2       = { version = "0.19", optional = true, default-features = false, features = ["vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
