[package]
name = "wesichain-weaviate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Weaviate vector store integration for Wesichain"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
urlencoding = "2"
wesichain-core = { path = "../wesichain-core", version = "0.2.0" }

[dev-dependencies]
criterion = "0.5"
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "vs_langchain"
harness = false
